# deroy_project

./: Dockerfile  MANIFEST.in  README.md  batch.json  final_presentation.ipynb  guide.md  project presentation.ipynb  project_description.md  pyproject.toml  script.py  seed_voxel.py  setup.py
.ipynb_checkpoints/: final_presentation-checkpoint.ipynb  project presentation-checkpoint.ipynb
src/seed_to_voxel_neurok8050/: script.py  xanthy_code.ipynb
src/seed_to_voxel_neurok8050.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
