[project]
name = "seed_to_voxel_neurok8050"
version = "0.0.1.2"
authors = [
  { name="Claudéric DeRoy", email="clauderic.deroy@umontreal.ca" },
  { name="Xanthy Lajoie", email="xanthy.lajoie@umontreal.ca"}
]
description = "This package is to be used for seed to voxel correlation application"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/brainhack-school2022/deroy_project"
"Bug Tracker" = "https://github.com/brainhack-school2022/deroy_project/issues"

[build-system]
requires = ["numpy", "pandas", "nilearn", "matplotlib", "ArgumentParser", "setuptools>=61.0"]
build-backend = "setuptools.build_meta"
